# MultiUAV-RL-RB

./: Dockerfile  Main.py  README.md  agent.sublime-workspace  iter.py  main.ipynb  my_awesome_automaton  my_utils.py  plotting.py  plotting_mission.py  scenario_objects.py  scenario_objects_mission.py
Best_policy/: Best_policys.csv
Cases/2D_un_bat_inf_req_1UAVs_0clusters/Random Initialization/: env_and_train_info.txt
Cases/2D_un_bat_inf_req_1UAVs_2clusters/Random Initialization/: env_and_train_info.txt  q_tables.pickle
Gym/: Astar.py  Dockerfile  GymEnvTest.py  Main.py  agent.py  ciao.py  configuration.py  dict_space.py  env_wrapper.py  iter.py  load_and_save_data.py  main.ipynb  main.py  my_awesome_automaton  my_utils.py  plotting.py  plotting_mission.py  requirements.txt  restraining_bolt.py  scenario_objects.py  scenario_objects_mission.py  setup.py  temp_wrapper.py  utils.py
Gym/Best_policy/: Best_policys.csv  best_policy_obs.csv  policy_per_plot_.csv  trajectory.csv
Gym/Flights_trajectories/ID_1_2021_05_16--12_31_43/: UAV-1_BestPolicy.csv
Gym/Flights_trajectories/ID_1_2021_05_16--12_31_48/: UAV-2_BestPolicy.csv
Gym/Flights_trajectories/ID_1_2021_05_16--12_44_01/: UAV-1_BestPolicy.csv
Gym/Flights_trajectories/ID_1_2021_05_16--12_44_17/: UAV-2_BestPolicy.csv
Gym/Flights_trajectories/ID_1_2021_05_26--19_25_51/: UAV-0_BestPolicy.csv
Gym/Flights_trajectories/ID_1_2021_05_26--19_25_58/: UAV-1_BestPolicy.csv
Gym/Flights_trajectories/ID_1_2021_05_26--19_26_04/: UAV-2_BestPolicy.csv
Gym/Flights_trajectories/ID_1_2021_05_27--16_22_34/: UAV-0_BestPolicy.csv
Gym/core/: __init__.py  configurations.py  constants.py  objects.py  states.py  types.py
Gym/initial_users/: initial_centroids.npy  initial_clusterer.npy  initial_clusters_radiuses.npy  initial_users.npy  initial_users_clusters.npy
Gym/map_data/: cells_matrix.npy  cs_points.npy  hosp_cells.npy  hosp_points.npy  obs_points.npy  points_matrix.npy  priorities_points.npy
Gym/map_status/: cells_status_matrix.npy  perceived_status_matrix.npy
Gym/parsers/: UAVs.py  scenario.py  training.py  users.py
Gym/settings/: UAVs.ini  colors.py  dir_gen.py  hosp_scenario.py  hospitals.ini  scenario.ini  services_features.py  training.ini  users.ini  users_accounts.py
Gym/temprl/: setup.cfg  tox.ini
Gym/temprl/.github/workflows/: lint.yml
Gym/temprl/docs/: references.md  refs.bib
Gym/temprl/scripts/: whitelist.py
Gym/temprl/temprl/: __init__.py  automata.py  wrapper.py
Gym/temprl/tests/: conftest.py
Gym/yarllib/: AUTHORS.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
temprl/: .gitignore  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  mkdocs.yml  pyproject.toml
temprl/.github/: RELEASE_PR.md
temprl/scripts/: check_copyright.py
temprl/temprl/: wrapper.py
temprl/tests/: __init__.py  test_temprl.py  test_wrapper.py  utils.py
(+246 files in other folders)
