[tool.poetry]
name = "temprl"
version = "0.2.3"
description = "Framework for Reinforcement Learning with Temporal Goals."
authors = ["MarcoFavorito <marco.favorito@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://whitemech.github.io/temprl"
repository = "https://github.com/whitemech/temprl.git"
documentation = "https://whitemech.github.io/temprl"
keywords = [
    "temprl",
    "reinforcement-learning",
    "temporal-logic"
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
#packages = []
include = []

#[tool.poetry.scripts]
#script_name = 'path/to/script'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/whitemech/temprl/issues"
"Pull Requests" = "https://github.com/whitemech/temprl/pulls"

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.17.2"
numpy = "^1.19.0"
flloat = "==0.2.3"
pythomata = "==0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
tox = "^3.19.0"
codecov = "^2.1.9"
black = "==20.8b1"
mypy = "^0.782"
isort = "^5.4.2"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.1.4"
flake8-eradicate = "^0.4.0"
flake8-isort = "^4.0.0"
pylint = "^2.6.0"
safety = "^1.9.0"
vulture = "^2.1"
bandit = "^1.6.2"
mkdocs = "^1.1.2"
markdown_include = "^0.6.0"
mkdocs-material = "^5.5.11"
ipython = "^7.18.1"
jupyter = "^1.0.0"
mknotebooks = "^0.6.0"
mkdocs-bibtex = { git = "https://github.com/marcofavorito/mkdocs-bibtex.git", branch = "master" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
