[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    temprl/__init__.py,
    scripts/whitelist.py
max-complexity = 10
max-line-length = 120

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[black]
exclude = "scripts/whitelist.py


[mypy]
python_version = 3.7
strict_optional = True

# Per-module options:

[mypy-gym.*]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-flloat.*]
ignore_missing_imports = True

[mypy-pythomata.*]
ignore_missing_imports = True

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True

# Per-script options
[mypy-scripts/whitelist]
ignore_errors = True
